Again fixed a bug when code everflows, line numbers were not aligned.

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -287,6 +287,7 @@ ul#menu {
         border-right: 1px solid $color_border_code;
         width: 12px;
         text-align: right;
+        vertical-align: top;
     }
 }
 
